--- a/QURAANEY/START/F_MAIN.resx
+++ b/QURAANEY/START/F_MAIN.resx
@@ -122,69 +122,70 @@
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAydEVYdFRpdGxlAEN1c3RvbWVyO0VtcGxveWVlO1BlcnNvbjtDb250YWN0O1VzZXI7Q2xpZW50
-        fhE26AAAAyJJREFUOE91UmlMk0EUXCxViWf8o1FDUEENEEtrxZYils8eVFOhaappI/EE5VAECnIIKshp
-        oQXlMhBFYwoCClGDECviEa+iwTOiJkq8+KHxiEfEOO42xegPNpm87NuZ2bfvLQFARkDcSy6Xe0TII3gK
-        hYKv5tR8lVzlSXM8lmeU/zT/bgwGA6GkMY4CXYDTEtXem7fy3pl0DkdipA8ta4QH45XCaVqt1mNUA7Va
-        PeZctlrbZ4n89LZrD4YchfhwtQwDTWk4n78GuxR+PRpO4zmqAS3Zs90c/uxFvR6d2Rr02fS4b12N3vRQ
-        dCRKkbJ8LlThKv6oBhzH8RtjpT+bEkMx9LgbneVxqDCJUBgVAJtu4e8EqfdPpVI5uoEiTMEvMwgGq9ZL
-        MPzxIYbf9+PL3UN4bt+OHJUvtohmDrLG/ldB8allZATUnWdWzC+tWCf58e1lN369ceDzTQuenohDrmru
-        d2PA9CpaJe9fzV8xS9IpeHh5eU22rZNcGTidia9OG96d3YXbFUbs0/jeYmeMU9AiIwUnZWR/s4y4DIra
-        lpHXX9tIYxzHxjwuLTIwoTVFicdHYvCofhNObJMidvnsJHo2fv+KWeTGqyySe1xCco5JCMlvkpE8ewgT
-        sk/CSzwQJMqskzhbig04ZBTBqg9E+QYxUqyivugs/2B2AeMxvrlWTMjuo0uZmLfDKgxNr1typqhZCVur
-        Hh3Nm+G0J6PTEo0SczBSywOR3RCCeIug25S+QOU2cv1M3narMLvIHoGzd8y4/TofLXfWIrVGgOgcHxgz
-        ZiG2ZA5qezi09ZtQ3bUK5moxTBkLi6l2LDMYu6100ZDjSSraH5jQ6FyBhptyHL4ehtprMlRdlqDyUjBs
-        F8Uod4hwsCcEVRc5GDMXfKDaia6mbcjzx157MAo7xCg5txiVvWLYehajzCGE5UIQSrsFKOlahJyTgcg4
-        7o+kGn/oU/1AtZNcT9DE+IRH7ZhXqUv2deiS/e7r0/wowRe6FIpkip3zEEmxKn7OI81Wn17FRu86adQM
-        zcgTXN13b8bTOMHtPJnGKW5MdUeWY2V7UfDZJP4Aw3vW4/0BJegAAAAASUVORK5CYII=
+        fhE26AAAAzRJREFUOE91Un0s1GEcf3ROXdz1tl6QmiMpKfTmynLO3e9cUUxsZGoVOfTCdMaVlNLLvNxx
+        UmOTmqmxIno56ya9rIWboWh6WfVHuYbQVFP59Px0Wv3h2T777vk+n8/n+T7f70MyMzPJBIh5icViiwBx
+        AEcqlXLlEjmXETOWNMdh8yzlP82/m7CwMEJJUwynQtxac4Jrmk5s7qhTSVAWI3qeE+5ZGC/znB0UFGQx
+        qYFcLp9ySy0PMuZsG/qoPwaTIRsDj3LRc/Uw7maFI1W6pFEhUVhOakBLtqxJ8Xv1tjQUd9QKGDWh6Mzf
+        iiaVD2oTRUj2FYLxY7iTGkgkEm55rGj0aqIPTN0NuJOnhDbSC9nBbtCEuI4liBaNymSyyQ2km6Tc3LBV
+        74t2euPH4HP86G/HlzYdXlfux1HGGXu97N6zjf2vgu50JzIB6s5Jkbqc00Z5f//6rgE/Pxgw/DQHLyuU
+        yGCE3yLc5hfRKjmdKiFpP0yR4kj+irvSnAidggWPxxNoorwf9txIw0irBr31qWjRRuC4wrmZPWM5rUmL
+        SQtF86HFhHSkCkmHypGM9eSRcqWEHfPU9C3LE6qTZegui0FX6W5UxImQuMHuID2bdtLfnvx6EkcexjuQ
+        B8qFhBiT/7jRxX4SzrUoWy99vGNr/fEQ6CK8kB+6AsWRnqjZZW/UBc9dx17A8li+fo8dIY8TqAtN3Nhp
+        63Mv1r7uaZo72nXB6Lq0D88qktF4NhpVcT64nbQGjQecUR05r0EbOIcxG43/TM7N6AXqJ+ke+HB9F0Zb
+        UjBUvQXNR1aiPmYJqqKF0Ce6wHTJFyO3wvHmghgNSkcUB846Q7VWrIFVzY55puF7MRip3YrhK+sxdHkd
+        hsrWYrBsNQZLPfG5xAMDF1aiv9gd/SWr0VvijZLAmQNUazPetMrtc2BUu+BFlgvenHVF3/kV6NMtw6eC
+        pTBpnNGb54TeXCG6MxzQprLH/fj50En5oFr++BOyfPl+GpmgoJARGAqZGZ3FcgGKZALoZHwU+vOh9bdB
+        vsQapzdN78rayGtSr+ddjHWfqph4wnj3zZtpNFqbnQU0zjBjpjmyObZsHgWXncRvESulgDB8liMAAAAA
+        SUVORK5CYII=
 </value>
   </data>
   <data name="barButtonItem1.ImageOptions.LargeImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAydEVYdFRpdGxlAEN1c3RvbWVyO0VtcGxveWVlO1BlcnNvbjtDb250YWN0O1VzZXI7Q2xpZW50
-        fhE26AAACc1JREFUWEfFVmdUVNcavSaxRaOm2JHeIqMg0qsi4gCCGilBRHoVaaHIIFWQEYKFLiC9yICU
-        AIJR46NoRFCD+oAoscXEp1EjWYnmJep+3xkgL7rWwx/8eHetzWXW3PPt/e2zz3eHA8D9P/FG8gZvLa7B
-        W4dr2aHPnQw14jqiTPjnEtYd6N1j0X0h2eJuT5I5zsatfXI6wqi3NUCnsd5zhc2RbSpTKh2VufItSm+s
-        P+4DHF11nppcnYfGsgYvzeaW7TovOqKNcLVwG+6d2YfHl4vw7E4tHl1Iwa2WQFzKskJLwHKUOyg8KrGT
-        1yq2lWUlxucYz362uNZtxeJGP+3hq8XbcDnDkMgy8dvtevx2U4Rfhsrxy7USDPfn4GF3FB51x+B6lQPa
-        d6mixEH26aGNSwwmLKDaeVlyV7I5btS7oz1yKR50p+DhhYN42LsPP51PxYOvk/GvzljcafEl+OBWoydO
-        B8mj2G4R9pl+0DlhAeVblK9fzLLGxQxzVDktQWu4Bm40bMetpmDcaAzAdZEHBors0H94M64SupMMcMJP
-        BiW2i7B39ZznExZQZCv/vCd1Lb4IVEXh5oUQBRih1EEaJ8NXojNWF2cSDHE6SgdtIeoQucrjmLsUml0l
-        UUTPJhnNwoQF5G5Y8u+T1HW5ozSyNknhjycDaBW6Yp/Zh8i0mItcq3nItpyHVJMPsEtnFryUp+Hop4tR
-        YD0fcXozn05YQLr5gtu1HkpEMpeItwG/3wB+7cHd8wVoE25G9hZF7LeRQ6GfOmoEq9BbHYk9q2a/yDaf
-        iyit6d+SgEnjBv1Np0Bo8kF9kb0Udfg+bp4tA54NAb+0A8NfAT9/CdxOwcsbQgx/vQM/d/ricW8KBFrT
-        kbF+AcJWTm2YsIAYvZmuaWYfIdF4Fl78OgA8vQY8PjlC/phwMwkvr8fh4Sl33G+l+fBVGCK13kWC8WwE
-        qL7jPWEBRhKTp6TwF77ItpfE8ycXSACJeNQ6goeNwLdxeP5PAe412eNuvQ3uNHkiWnc2QjWmv9Se/9bM
-        CQugAm/XBa0aaI0xxNO71PFv/UR8DPipCfixFBiMxO89AbgjssLNKmsMlDsglS+D3XxZtv+T3yhAPCvH
-        v97Kd9Fyrvbj/XnvXAYF8AoJOA48qAOG9gJXwygOzviuxARDZZY4k2aOWN3ZfwQbLvEcEzBu+bjCVRxD
-        cjmfy292eQWjC9+i+4w8J7nMq1V+ZP1p6r4N+O4AcDkI6AvCDyJLDObo4lqpORpCNBGwbNp+WvM+4R3m
-        wM4sAy6CEJ6pz4Wl63GfHWTQHSk/JuBAzeb/JWASPTZNYLbQvClCn2yvpOTnAZf8Cdvxe5cbhvINMJCt
-        i8FCU0r/IlhLT15Ha9j+M/FcaIY+F0qEIQd0ueD9ulxQmg4X+LnOqwKyGxzHE8D28sOMDQu/udeRCPxQ
-        ipd9n+GPLmfcE/ExmK2FwQITdCXrQ6A+7SI9u4gwdUzAf0m1uR2p2px/iha3Xaj1qoCcxq3c7eEjYtwZ
-        riIcGds65sDbhPd8NGfbiXbo4M+bhXh2ORH3ay1xu9yU9n8d+gtWI2vjYqyXmvwpEztmPytScsaWKz5j
-        wxV2beIKOzdyvns0OO8kjdccaHTkbj2pHMFwBd3LXxfw7k7/1UHJNjxUemviWnMMHp3fizuNrji33xT5
-        9jIINpiPjWvE4Zv19wAWdX1C5Bu5wx0buIIOK84zQZ3ziFcfqR972JiLLVjFHay14757XMrdYPi5hH3F
-        Oh/rfmpcgoVZWdLWF+2V4cjYqoYk44+wW2cmYQZ2G8yB0EICmW48CGyUn9vayq2ltTNGRTD3JhV0WHP5
-        7eu5PIJrjBrnskt1REB0njHBiBOWr+eGHh0eI2bhYQmeEpHG19xTvKkip87lRf/ZDDygX0EXRZGoDFmD
-        Q+6ayHVRQ6HHChwN1kXrTj3k0VsxOFXvT2eBapmFs4Im1WBhZHlg9VjdSU6C5dzWyGUjAgS5hpwgx/B1
-        4qlhaWYmuwutj2XWbUXbJQEGHuSi9pQ/hmgW3O/NxkCDAGeznNGZZoN/7LXCVwlm9DLSh2+kGiq+dkRy
-        tSl8hZpwCOO18J3lLIhgNmH6qJBJn4byRgSw8/l3qyP2r7OJL7A6n03EJ/qi0HcvFT13Y9BxcwdOXvdC
-        bvNm1Nf4oLshHNcaInCxwA0NQksIo/XgGaeOnBMW2HdcG8lN6tjXZoj4SkN4J6nDLkilx2ybvNOokCmj
-        btAZpcFA19tSSnNmBKbq1WTXO+HUlV248P0edN0Kw/FvndHcb4emfhu62+P4oDPK2m2RUs1HaLo+/Pdq
-        IzzLAEkVJsg7zUfqMU0kNPAQU7sUUSJlRItUkNSggZgybXgkqmG9l1I18bEhxUSwjIn/TPGIUQ8SVlmg
-        5aovvhzwQ+MVexzt24BaMawJVqj5xhKiS5aou/wJGi/b44srjqjvc0BxlwXSTxgh6YvliK/jIbrmYwiO
-        KGFnhSIiyhUQViaP8HIl7KriwSWeh1V20v6j2WABFQfjXZ8kjb7i9i0o6ORj/wktFJ1dg4pePip61qGS
-        UNGzFmU9pijtXoOSc6tReMYYOe16SDmmjsTG5Ugg4pga6rpaCZGVikSogNBSeXxWLIfgIjqihTIIKZSF
-        f4YS+G7yZ4mTzQo24MRDZpb37pXPqrudkNamhb2tK5Dapo6Dp7SJxAB5nYYo6DKiuwGyT+si/aQ2Wa1O
-        1i5D/FEeYkVLseuIMiKp4/AyIi6RQ0iRrJg0sEAaAfnS2JEnSZBC0CFFmHvIPyTOhaPbID4ec9xiV+AI
-        CdjTrEpQg5DuDMktakimz8lNdPbJ4sTGZeJu42iPo4lYUKVMVpPN4m6JlIgZaaCYVAr+hySxPWcJfLMJ
-        WRIIzJXHOje5X4lzMYEdzxEHtkWpIqHUlIryEF+vgngKEiOKrydQl3FHVcQWR1d/jCgiZd1G/NUt2XyY
-        un2FVBJ+2RLwIVKfTAl4ZyyGe5oEHGNlwfeQZ7+WF4w5wDIwfbWdjNEGX+VMuxCVHx0jVeAStxQewqXY
-        nv4x2aaM4HwlBOUpIiBXEYGH5BHK9pb2VGxxnjR80qXhkSYF98+l4JYqCWfhEjjGScEmXBobg2Rg6SuH
-        tS5y9w1sJA/zjOaZs6YJzP2/xu00+p8Ni7k8/XkrDTZJbjHZIhNt7qYgsvBS7Lb0Uui38FQYIPUD5h4K
-        36/3UYSltwIsvBRg7ikPM1e5u6bOsoNjWOMk02tsL1WvYyWRqLZmgbs0bw6bdlKEeYT3RgM4ibMNUeFs
-        g5eOnQbx+GWOENgIZYJYWtmi+aPBYa9aCYLkaEFWlIF9XjIK9j3bY7bmI8Kc0XqsLqsvfj8w0v8AaXkB
-        /yLxnpAAAAAASUVORK5CYII=
+        fhE26AAACdBJREFUWEelVgk4lWkb/pqZ9rKUfV+aaqb6ixAVY0wpLdKCtMnSphLFCClDZYtqikoiSxkn
+        cYykVclS9iw5CMcuQlRSkft/39M589dc15jrv3zXdXs/3/e+z32/z3O/z3cYT09PZiiwd2gx7B3aTMre
+        Bcw9Jz3mkbvB0ideS07lH1+WU+CzrCnvmBGyPRd3P3DRy0+1105K3Ka27o8tM0Zd3TididkwbcjYlHfI
+        CQy5ErZpMgm2GrPY2zVvpOzW/vTIQw9l4VvQmhWErpII9DXEo7PAH3Up+1AUvBIp9v9BjMX3nZFmU7Qu
+        m6rQEENzDLV7ujjeWk02yW5eT9nlLSg5o0vIzqK3PhG9XBZeV8fgdVUkesrPoSPHHZ05h/E81gLph2Yj
+        0kLl3QUT+YXDFhBnOcsn08cItYk2SHf9Ee05/ugoOI2O/CC8zA1A+2MfvMg4goaUXQQ7UZe0DQ8cpuCy
+        mQyCFk3KGLaAmA3TnxcGG6PwjBFiN8sj9VcN1LJ3oy7ZEbVJ9njOsgUnwgzll9aijCDn2ELctVNGpKkM
+        /H4WGRi2gAjTKQN5AYvx577ZCF8rDZa9HqIslHDv17nIOKKDLC9dPHDXxq396mBZTcFNG0XcsFJABJl7
+        TE8IwxZwfpX8h3tk1zEblRC8WhEfuzlI9bVCkOFknF0mjvMrJRCyXAIBBpNwSFsI26ePwfX1sggzloTn
+        /Anvhi3gdyOp+njbaYREnBBvAd7XAm/z0JQbhlu+axGyYSpOrlNFuJ06rrnpIz/OFcf1hT+FGInDXWts
+        JREwYkij/9sp8DWYlBhhrkh2KApudjTQVw28Tgd60oBXd4B6fwzW+qLn8V68ytiFrnx/uGmNxZkVUnCe
+        O5o9bAGH50+wCjQUw9GfhPDpLQd4VwV03ftM3kXAPYbB557ouG+DtlTSH9Kc4ao1Dl4/CcN+9nc7hi1A
+        T27kKP+l0p9CzBUw0F1ABBARnamf0ZEEVHpi4JkbWpPN0ZS4Dg3J2+ChIwwnjbGD8yS/mTBsASTAtwkO
+        +pzUw7p410R23FtOiG8CL5OBliigwhXv8+zRwFoJbqwxODEWCFiqDO+lKrT+I/9VAK9XDn19c3GrlmWc
+        3cz+1idniAFLiYDbQHsCUO0HlDkTO1iiJtIA1dHLkRVohCM6wh8ddeW3CQQMGZ5zQpWhqPx9BlN/Rf8r
+        8Bd+Q8bxoZtVz5bF2pHUPyC7vwXUnAJKHIBiBzSzlqPinA6qoozA3q8J+1ljTpI1ogTf0QwIOP4+8uIL
+        HtaEavyTgBFk2hg3Q2mjZJcFJO1XifNDgaI9BLvxPtMa1RcXghOig4rwRcT9MjBWGrmErKH1p+L/4hhS
+        ADdywVACaC0nn1kl/bT10VGgOQqDxQfwMdMSraylqAjRQkWYATJ9FsBNfUwhmStDMPr/ExClywy2JPPx
+        JxmTBKWjGfiWYOJOTWEz1l5t9HPD0VdyFG3xy1Efs4jUfwnKw35GsIksViiOXE/FCtJPgwxk2RHsYgYy
+        dzIDGduYcn9Vptzv86f6r/RwIxcSUjYz2EyRSJDwdwHjzu6c5xCw5kdc3aGJqhuH0Znrh4YkKzw5uQgX
+        zZXhMl8cDr9IUvMJfWnAgfTtTH+6LdP/0IrpT9vKlPkqM2XHlb8WUBuuzQw2XWcGG+MJrtGXdOeC3Y9m
+        e+gYJvy2/tPjaCec2TQHx34Sg7f2BILx8F4oAt9lcoiw/AEnTVQHTphKLyZrx/NF0OyN+HB3E/P+1gam
+        75YFU+KtxDz1UvpaQPV5NWawIU5ATM1DHTwqzVdNkxOqfaU+dsWn+ocn0U5+BRWyXHF1/y+4YKOJ81vn
+        INxWDdcddZB6cD6S7WaixGdWf5aHQnSolZQmiUHNSP1A49G4I4qOKDKFHopfC+DvVkA8+qHPHAPOBc2b
+        jX8YoSfDCf1Vl8C9Yo3mjFNoyw8Bh+2G7GBLZASuw0O/lUjzMsRd53m4vVURb25uQkuEPp75TEPmQbmU
+        8K2Sy0h8YYKxAm88OSj7PwFfpjrLb/a6ihCN3MbYZXiT5YL+8tPoL/bGx5wDeJ++B9XBhii9sBmVLEdU
+        sV1QGGaN9N8McWf3LDywlsfLKEN0hWuhK1QdryL10HhOG6Xe3yNjv2xetKXkZr6QUfxsMDxDkOvb+d+P
+        HV/gpXyt8epyvMl2RX+JPz7muuLDQ1v03bFA321zvLuzEe/SbNESbYJnvguQbT8ND3eoIMd5Fip8NNAZ
+        rY/2c7PRdmo6XgRNQ0vgVLQE/YDWYHXUnVbHUw9V3NwpSetMmxQVQT3G+zPq/kF5h7owPXx4tAd9GXYg
+        ZkHvjdXo/XM13rJX4Q17Jeoj9FB/SQ8NUYvwMmENXlxfg+Y4EzSFkkbkOwMtJ6aiyX8KGn1V0eCjgvrj
+        yqg7qohaLwVwvZXA9Z2KQhdFBK8S2cP3BjUozxjjct0Vil8lmeINazG6w9TQE6uPHpYheuIWoTv2F7y6
+        YoCaEE287v3AQ3dXBzrSvNGcFYW2sjS03DqG7pYaQvSZsMZTHtVH5PHcQw5Vh2RR6S6DCnc5lLop4A9z
+        0WzCSXsFbXC8JiOU5yrf9/qGBTouzMHL36ej/dRUtJ2dgfbz6mgL1UD7xXmoCJiJtq5etLCsUcVywgty
+        X+o5nfestbUVtWGmPLIqSuYmDc5BKXBcpPCMwlkSpc5SKHaVQ5yZSAfhlOaXgXc8RHKcZNDNXo3WwClo
+        DlBBs58KmnyU0XBcCfUkjfXeCihwkgK3tQecc2uR6yhB7rtRFGSCysc3UdtCnhPCcj5ZmZMESg9IoGS/
+        BIodxfHUQRxF+wicpBGzRugt4aTHgB7PzxnI3ieNykB1cL3keWR1ZKz9jeCILGoOy6LaQwY5+8TwrK4T
+        +SeMUXrVjdx3IM9DDc+4nSirqEVZxG5CSMh4hGKEUAyF9gR7J6Ngz2Q82TkJd6wnI9pkIv21LCXIAPXA
+        2EBjUb2ELWJn72+XaMncJYnsPVLItZdAoaMkig98Bg1cWNmGwqp2FOUXojh4E4pSowmikB9BjmRpNR7v
+        moRsQpSxfRLuW4kiZaMIEsyFEbtWCGErJrYd/3ncJevZo43opglo9v9qt2PIPW0W4jZzx8/1MxTecM5Y
+        xOOKqSjr2nrRnPj1ouXXzEQ5LFMRTryZSCN7PQ0sguumwogniF4t1HTZeGJFxMqJFZcILiyfkH/ScHyi
+        h+64o7s1xtgYqozUJbFp+5MgmMg34Ajmga04k2YjLjgNvPZLM0JAWygVRN1KF0nyjUM/tXIECvyANCgF
+        /V+eD/qe1piuESMQ4cejcWl83veBkv7TRV/S0tCJAlF0IQU1DgXN2JcQPBO8pyOdT9fTOLzvwBfgcf8X
+        rM8KCBK+Im4AAAAASUVORK5CYII=
 </value>
   </data>
   <data name="barButtonItem2.ImageOptions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -717,6 +718,24 @@
         rQZRFyokEJ+6EL4DEeM6vQ6d3gFOefQS+R8e/QVC/v+Nvtp35l9GI7Sm2cT/hQAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="accordionControlElement21.ImageOptions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAALASURBVDhPlZNvSFNhFMav986ZZWlW+MEKNS0hUAophPxTmn8oUyIxMo10alqiTjLNmtamLTNL
+        zZGYlbrWptlCZ0rkdC0dVlNxKaF+kMigEMl90Qp7uu9lk8gQeuFwOPee53ef+77voQBQKwVFUbSoZaRH
+        1DqKS6qRXrZmiouLKWusKCZgdvEKW96j79MiCppN5AHvfwG2wqYhqEZ/IrtxkADslgF0eYFLTtgGG2KT
+        DVtL5mc+NKJp+Dsy6t8RwOplAIPkKAewLF6JIlQnVR2E5FGIjgjS6t6gzriAlNoB0rSO7IsFTnNCgzjm
+        TwBfojiAiRk1rsqDiWBtUo0B1YZ53NaMkXqjUXBCZkpLmFW4bYu1CnkWyyTbFTUEwDBVjssP9nFfjK/U
+        Q22ah/LVJHrjopWTeen41t6MJ1u2znCAwYpo3citGBhvRBHLawru7YF2vAgXav0IwPG62oTuD2Yo8nMx
+        npUC8/NWtEeFI5mm73OA4bJDwNRTvC0N5wTCGl9oTDnIqvIhtXND9xjaSgthTDsO8zMlNIfDcJLhqVwo
+        yoEDDEhCgKES9IkCicApo8IbqoEkVLemktr1pvQO9OVlmFM2Qh22H8dopsXZupkEoL/oj8X+89DmcpbX
+        C6v2ome0Eo+7pBCfPdPc0aHH9OwCyk9lI4K2aXdiXZKTiCTHRgAvs3fhR08qOtN3QiaT7ZB3idGpEUGe
+        4QtFrMuvj1/MSL/yAh7BUjA2jCcRE12QFaBO9u5uE2yHKtFTS/45UbBhUHnaAxMdmegXueFuhDPcg69h
+        d2r9a+LQOjt+VgCb+WzYk/B35bvXRm36PN2fj7kJOWQB9hD68L+y7zZbenhWAHfxSLE0WRS1qjTAQa0V
+        B2FMdQ6VoY7I97VFnDuTQ+7H31P7LwCfbY5P8uJpBF7McIIHI490pY+Qu8EGmZFl6zeY++MZdUVGoQAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
   <data name="accordionControlElement1.ImageOptions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
@@ -899,6 +918,45 @@
         z1gsw9ct4N/HHoXIEumYzgAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="accordionControlElement20.ImageOptions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAAAEnRFWHRUaXRsZQBVc2VyO1Bl
+        cnNvbjtMtiJlAAAHZUlEQVRYR8WXD1DT5x3GY1cFMWlCEIGCBUIQ+asgJNCgMFG7KtRKABUJighEKqIo
+        GFR0CALOaRXaWEUwVSlKi3YE1Injj4yhFQVRWtcrLWWlWKWOc5a7zeOevd/McHRNUI7bLXffu/fe9/t8
+        nud988v7Aw4Azv+zhs0zA7kcY7VTyuNkSrmcHXP5jjukvDSVlFuW7sdtpdoimXKC1fxUHy4nedZkzot+
+        9JseS4D1BUscUbFzGeqPbER7ZQ7aPsnG5UIl9i+fBRag6H8Z4K3jiXOH+q6X4NuGQ7h3bhs6TifiZvFK
+        tBVH46YmEQcUErAASewEXmI14XknMZYTsNwTYvOku16NL6t348/7FqI+JxBXsvxxebsEVRk+0CS54b3Y
+        GVB6Tnma4D75zuqZZokswMujhfhFgO3+PI6RSj+TuRRf1/4eDfnzUcMMz29wR0WiMzSxDiiMeBX5YTbI
+        WOCE7EXWeD9qOjb48CB3Mo1iAX5lLMQvAhhrVEm4HTfLd+DWiSRUprijNNoeRW9bo+A3FshdIEB6AB97
+        InzQemYX0qQCFIVZImX2FEQ4mVYzptGn8kUDTEiX8Aa/qC5AVaYMh5e9iqxgATb58aD0MoPC1QyFygX4
+        4doR9N/4AJqtodjozUWSqwkiRKYPWADBeE/gpS0Sbu+1D1VQRzsi69dCFMQE4UNVFLQHEvB5TT4e3TrO
+        zI/gwbXD+K6uALnLfREjNoFcNPkpM5827gBpvlOuVhXEoSDMFoeSQjH4XQsG7pbj77c1OvMf2c4ftBzG
+        /ab96P1TDmqL1mKlm+BfSx0m/5OZ24w7QOocsx3qdfOQLpuKL5ov4Mk3VzDQcQqP2n5u/n1dLr6pUaHx
+        /RjES6yHlrxm2svMrccbYEKgmGu5WWrem+rLR09nC/7RdQmP2k8MH7tu53U5+Nsfd6Lz7DvQ7l0KhbfV
+        QLDNpFJmzh9vANK/HO1qptgsMcdnNafwuOsyfrxZ/J9jv/q7YfPu6nS0lsRCsykYka7mt5lONNpd8KK/
+        AgpAtxp//ZxXujW71+NJdyPb/VH2nZN5rm7n31ZvxeflSWh4Nxx5yz2xQMQ9zTTCMV1Ez7k6TZZ5WMZl
+        RcketF/SoL+1BN/X731mno6/nlXiL+pInNociDg/q4HZlqaxo90B5DWWE9CfgiDcy+qDwtTlaKt6Fz21
+        e/HVH9Jw+2Q8mosiUaEKQsZCR8isJ5WP9vDpNzqmADwejyMWi03mSaWpqjdnIFcxH2W7V+HSwVXQ5oTh
+        vXW+SA2yg8JzKmytLFX63YfwzIwe7IsGoDebCQtgERYWdk4eIX9yINYP5/KikbXUA2u8LRDjwYfS3wrp
+        Cx2glIng5eX1k52dXZU8wJ8z3gAT6SZjkNUM9mVlZSXKysqQGxuInrp9uPNJBuoKV+PM9sUo3jAXh9f4
+        Ik7mgry8PFAvaUj77DYk1s8+zzuBSVYTJ7qvEb7SuG+GCFuCg3TmQ0NDSEuOQ8X+JDQVv4PP2AvqysEV
+        0GxZhN2rZFj59hJ0dHToeklDWmIQi7lPGplgtAD0CnVImMq/czE+Du1r43B+yWIoFAqmAQYGBiAPlyNJ
+        EYNNGzcibd06KENDsXjRQjQ3N6OpqUnXSxrSEoNYxGQ1/Ho2FoB+88KUlJTSg5FydBw6hDYGaZo3F6E+
+        Pujs7MTg4CC6uroQEhKC7D3ZuqIxzdEa9VAvaUhLDGIR89ndoPtryViAifb29v5qtfqnT3+7C8dWRqE9
+        IR5XA2XY4+mBjIwM3L9/H62trTrTu3fv6orGNEdr1EO9pCEtMYhFTGIzb93zYCyAMCEhobShoQE3zpZj
+        15xZuBW/Fo2y13HB0xM+YjEaGxsREBCgM9Z/aExztEY91Esa0hKDWMQktv6GNBSAjsY5Ozu7t6enB1/d
+        uI5MBzvciIlGHYNf9HBHjtgJXszgTaEQrG84AI1pjtaoh3pJQ1piEIuYxCYPVhMMBTDx9vYOLykp0X2X
+        fd3dyLSdhpbwZbji54cadzdoXWdCI3bGx8xIbm6uC0FFY5qjNeqhXtKQlhjEIiaxyYPuFkMBBCtWrFBr
+        tVo8fvwYP7Dvc5u1Ba6+8QYu+Xij2tUNn7q44GNnZ5Q7iXDSwQFv8fm6ojHN0Rr1UC9pSEsMYhGT2OTB
+        AggMBbBLTk6+3tLSgv7+fnx97x62WQlRFxSMC7O8UDXTBeeYQYVIhI+Y4QkHRxybPl1XNKY5WqMe6iUN
+        aYlBLGISmzxYADtDAZzz8/OfPnz4EH19fWhvrMdWq6mo9ZdC6+GG8y7s6J2c8JGjI07a26OEGY8smqM1
+        6qFe0pCWGMQiJrHJg54DQwEs5XL5yaPHjkN7sRZVRYVQTrPAabeZKGXHe9T+NaiZaZGtLQ7a2CDfhv0/
+        MKJojtaoh3pJQ1piEIuYxCYPFsDSUAD6fc6IjIysValUiJ/thXghD2upzHlYw2r1s4oR8BD9X0Vz+nXq
+        JQ1piUEsYhKbPOguMHYP0H1ty2o2K4mBkrI5fb3OxiNr5JohLTGJrXsn6AP8G54pnZleRGgUAAAAAElF
+        TkSuQmCC
+</value>
+  </data>
   <metadata name="fontDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
@@ -908,7 +966,7 @@
   <data name="F_MAIN.IconOptions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACw4AAAsOAUC+4UEAAASQSURBVEhL7ZVrTJNXGMfNNPu0bMkublmCcS7LNqIit1rq
+        YQUAAAAJcEhZcwAACwwAAAsMAT9AIsgAAASQSURBVEhL7ZVrTJNXGMfNNPu0bMkublmCcS7LNqIit1rq
         BWQKFkGZKLfCmFydoCBVLi3aChQZ4hXoQCmMmwJjWoGAioKg6MBSiiANQrkNBQqC1AFDeN7/XveBJWPb
         533wJE/OeU7ePL9zfud937No0ev22sBajtliHs/qzb+bsLQ0f4PL4SyY/09jdfV1zoMDPQowk7UAnrHB
         tlk2RtgYRHV5dnrZlR9lmNGyef+fc8A0G1MvZqZG7w30d+W2tKj2/Ctksv4q+/DvMPQ1Y0hdgesXc5F1
