--- a/QURAANEY/F_INHERATENZ.resx
+++ b/QURAANEY/F_INHERATENZ.resx
@@ -416,12 +416,212 @@
 </value>
   </data>
   <metadata name="barManager2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>142, 17</value>
+    <value>126, 17</value>
   </metadata>
+  <data name="user_name.ImageOptions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAAAC3RFWHRUaXRsZQBVc2VyO5db
+        CgIAAAMZSURBVDhPhZN7SFNhGMbPds7ZUldemrmcm04nbkzTqVMprLyV2UUtzdTKsGWbSd7S1GWp3TQL
+        JEiLIBMzI0TNpNJlsQyLaEUUUVBQUFCof0iiadLTd9YFhcA/fnDOx3l+z8v3cigA1F8KfQSUUcEm6mWs
+        JUvKfMuQ0G+TxPQ2iqJ4s7+b/fwvzB3meglUB0Mlkx2H03HnjB5tpZuQ4eUwk+i9oHqNnF30P8kcwV5P
+        9uyFnFh012SgIV0HQ4ArTOuW/dzsI8RGhaB2XsFuGdt5KS8eBTovNJcZ8aqvCffOFyFdJRpO8GR75xVk
+        ujNV2QqHn2NfP+HH8BOMvWzEULMBJRGuY3EedMu8Al97vrxQJ50aH/2Cifft+PzgGAYv7EKB1nlMJuIt
+        J5e5kCAiCAl8AjXnDsirc12a7ukbSzdGnjbidVcBrpVEY4u3w4vsUPd6U5T8ceVK6WR+iNiSrXbca5Nw
+        Y1WynJBiCPL8Fb7tXUf1GGo9gt6j61G11guZ6sXvLuesmLG2GDD+vA4Pz21HTYJyOlkq1Num4EaS8/gB
+        Rlo4dMpNAlNMMBrSglC7UY0sjSfKwzzAhWfenkVP9QZ0lMfAfDIO65YwZluzms/XVtiLRm4kxMO634ji
+        Vavx6OphXK/KJO1+qIyU2pp/vKpDR1k02goiMHozFVFO/AlO4LiTYVtbw8Nh3ZeD+7Er0RioQV6wFobA
+        ABQp3FEcshif+kswbTXh+8NcTAxkoqc8COELqQFO4JHPCD6Y01IwmJSAO4Eq9GqUuK6W4ZzCFYV+zrhb
+        n4IpawU+dm4nzVtJWAt9sOO0vz1l5ATKclb4/bFhNwYiw3Bbq0aXWoEmpQRFKheYT6eS5gr0n4hD0lIW
+        0U586ETUM40dlUeyApugjFlgE/SF+ONWkAptKgVKNWKY61Mx9dwE8/E47HBjUOvGIoniTZNM6J+t8TiB
+        OJlmL1YwQhykhThA2MNjYPR3Is2HbM2bnGikkR+SI4ziXSEZyXj3akpl93uF3P5dCRpCyB+ispQOSJUJ
+        EelCW2geFUvOIwhBXJjAcmGOX3hg45dNZ51pAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="user_name.ImageOptions.LargeImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAAAC3RFWHRUaXRsZQBVc2VyO5db
+        CgIAAAlXSURBVFhHpZcLNJVZG8ePSr5zOA5HHLfG5SRyiU7hiCi5VC6FqE4ol5CKEtJFiML0MaEykdJF
+        JNWMQymS66hJEWlqvtEY3xQTynT9mvla/9nvm+lT0xq+Za/1rPWu9917/3/Ps/fz7P0yADD+zhLmsBnx
+        VmzGztlsxvbZbK1tQnZEjLlMQZSZTDNlkWYyR4nZEmNQNtJ8H38fcQAl3nWjiLHNgr02xUkLxTvccDU7
+        DK1nE9FSkoDLmSHYu8wY4TNlssJnyTCo9v9A/G1najLacwu26+HgOW97rufhp5p9uHduC9pOBuFm7gq0
+        5IpwMz8IaT5mCDWRDiZDxhGTGC3IiABEXDHRTuVF19WD+L4sDg2p9riaaIWqWCEubzNDabQA+cH62O87
+        FWunS/8eZMhqX6XHDCIAE0YDMSLAVqFMVNHWxXhQ+U/UJNuinAieX2+A4iAd5PtqInOpKpJdVBBtx0eC
+        gzIOeE3GegEbS/lMLwIwfqTlGBGAbLi2m4XbcetoMM5uMMARkQayligjZYECkuzkEGXBwa6lAjQX7USE
+        uRyyXBSxwUQanvx/lBEA5lgBJKLM2a++K0tB6VZLZLipInauHDaashEynQWfaSxkhtjhl2vZ6L/xJfIj
+        nRE2QwbB06QIAPMxAZAbK8C4SHOZh9eOxeCgSAux87hI8bbBsRgviNPW4G55Mp7cOkzEs/H4WgZ+rk5B
+        0rJZ8J4iBQ8+83cCoDRmgM2mMnWlKX5IcVHDvmBnvPq5CYN3CvH0dj4tPkA8f9yUgd76vXh4JRGVWf4Q
+        Gcj9tkSL+YYAqIwZIHym9PaDgdaIspyE7xov4MWPVRhsO4EnLR+KP6pOwo/lMag94I1AM+W3zp8xHxIA
+        5bECSNhqSClGCLkPw2dx0N3RhOedFXjSevR92GnPqxPx70s70HF6HcS7F8NXwBucqyp1hABwxgpApfIE
+        0TSWzyYzeXxbfgLPOi9j4Gbuu7DXff5evKssCs15vsjfOBee+vK3yThtauyYAKjBQ1WNEzqT05UftxYv
+        umqJ94fImlPiSbTnP5VF4m5hMGq+cMeeZUaw15Y5ScZxRxKn5x+pE6kDFISUm6GiX6yX1ePWinz0N+fh
+        0dXdQ+JRuH86BN8c9MSJTVbwN+UNmvCkfEdTA0YFMCwKcu7GvC8zw5ehpfQLdFfuxg9fR+D28QA0Znmi
+        OMYG0fZasFSZWEhtPupMGMm5UQP4+voydHR0pOYIzcJjFk5Fko8tCuJWoiJ9JcSJLtgfOAvhNurwMZoE
+        dWWlGBaLxVxvqyGxdt5k72Br9TOBs1Uf+QuVH/maKp5ZIVDwMVBmjvMw5NDRH6kUUyebFFtWVsHV1fXc
+        Us+lL9J8TXFujwixiw2xeoYCvA05CBHyEGWviRBLbRgbG79UV1cvXW01OS03PgTXynLR234aXbWpuJjl
+        hz3+1nA3lEtUZU8Y/5ezu6SkhBHN49JGmiRVyeazWas8LITfnz17FgUFBUjytUJ3dSraS6JRnbkKRdsW
+        IXf9HGSsngU/S13s2bMHMWu9cSRpA/77vBOv/5WDl3cz8OJ2Kp41x6OrfB3ivfSxgC/tTx/dw9epuLiY
+        cSY7hxKfqCI5wcBPgVObOlUbm+fa0OJv375FRKgfivcGoz53Hb4lB1RV+nLkb3ZA3EpLrFjihLa2NoS6
+        mqP5qhhvHlWi71oyzu1ajHg3E9QUZmGAFLGirVZw0GKJaSeHAxQVFVHiVGg0gybJtV8M8EOrvx/OOy2C
+        j48P6QoMDg7Cw90DwT7e2BgWhojAQIQ4O2ORgz0aGxtRX1+PVZZqeNrXi1f3c9F5IQo7nfUwU102Ms3P
+        Fr8970VjhgPsNZh9REf2A4ChnOeGhYUdSff0QNu+fWghAPXWc+AsEKCjowOvXr1CZ2cn5s+fj4RdCdi9
+        ezccHRzR0NBAi2dnZ0NkyqMBXtzJQM+VzSiJtUfqSjM0lx7Gr+15aEizwbzJUk+InuLHAJLa2tpCMsnL
+        r+J3ImeFF1rXBKDOyhK7jAwRHR2N3t5eNDc30wB37tzBqVOn4LjAEWVlZaioqICTkxNWkmy419KElx05
+        GKzfiKdXgjFwyRd9Yk90Fy3CcXKvMOVJ3qD22McA3KCgoCM1NTW4cboQO2ca41aAP2otZ+OCkREEU6ag
+        trYWFhYWtDjV0tPTSWTuwtR0FnJyc2GkIoeUdZ543XeHiEfgyZU16K/wQV+pBx6fc8L9wzaIJDcnXfnx
+        6R8swVD4dRISEh52d3fjhxvXsVVTHTe8RagmghcNDZA4hY/pBGIhlwvS7z0A9TxXVhYCDSVa/GVvG35t
+        2IwnVWvQVy7CveOL0HF0CYq2mCPaVR+G3AkXx0kw+PR++3MTUvkuEAjc8/Ly6HXu6erCVjUlNLm7ocrU
+        FOUG+hBP00P+FB2cIRAe8vI0REBAAJxkOdiuqTIkfpt4vgkPSkitcCOwfBYWTJWHHZ8DK74ipnCZVRIS
+        DCMq0z4oROSF3PLlyw+KxWI8e/YMv5C13qKsgDpHR1QIZqBsmj6+0tXFGR0dFPK1cVxTE64cDhYSz2M1
+        ePic9pyI123EgzPLEbuEDxcuE/ok0ysrK/F1aSk2hIXDxMTkFNHimU2a8GElJC/VQ0NDrzc1NaG/vx8P
+        7t3DFh4X1TZzccF4Okr1dHGOiBdra+MUET+qqYWcyZOxU/N/4k/rwjFw2Q/teS60537SbFhNHIcOUhuo
+        DMrafwB2dnYtREvDVOFd9IcvgU5ycvLvfX196OnpQWvtVUTyJqFSaA6xoT7O65LQ8/k4paWF4xoayCPi
+        u7RV33ne04qnNRvQeXoZdhDPKXEXLgshLBYcpCRRRyJQ3/gNxOUV8Pb2pu6Kep8CUPTw8Dh+KOcwxBcr
+        UZqViRAlBZzU18MREvJDGp/hIBHNUlNDuooKklVUsVKggDf/eU3E1xNxLyKuTTYoEyuYLKxiMuFPAByl
+        JqLgwH5cvFSJuLh4CIVCagmUPgVA1f6pXl5elTExMQgwmY4ALhv+lMmzsZrYqiHzlmNDRMzLWJ7OhAGS
+        Zu25C2nPHdlMeHBYcJeVhhuHmCwLrgITiEQiWFtbX6G8p0rwXwCGzv2J5KMaMRNiZp8wc/LuT5ttr8Mu
+        X6LHhouODC2uryB5jHy3G9ZneP8Z1D6jdj8l/kmA0VwghqUt9QNKAXPoivbuEkI90/+Eo2nUXH8Ad4Tz
+        xtOXyQsAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="date_time.ImageOptions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAAAFHRFWHRUaXRsZQBEYXRlO0Nh
+        bGVuZGFyO9842KYAAAKuSURBVDhPbZL7S5NRGMdXWd7t9qeEpCFSIVLZiCiNbpY1ltYqESxNzZLKxCxD
+        DSEqNJt5IbwszYrKS0ZQJN4gc3ZzLt3eTad7927v7NvzvG1a0Q8fznOec76f9/Ceo1KpVEuIAGLFHwRS
+        /T+CqM/w2nJfVhXQlajufJ2oRveuBHTu3IaXO7bghToezxLi0LF1M9rjN8IQF4vWTTFoit2ARzHReBgV
+        2eX7oCqwN0kNe+0t2PUVEGrKIFSXQrh3A5bbxZiqvIqpissw3yyAuSQfpqI8mAqz0RgdCRIEE6qgnsTt
+        sFFw4oIO4+ePYzwnFd+ytPiaeRRfMlIwdjoZRt0BjKbtw4h2D4wZGjREKYIQRcBHt94twfdcX/CMRgl+
+        Tj+EMd1BCu7HJ+1ejGiS8PHIboyeTEH9+nUsCGVBcPmDD5if/wnR5YUoES4ZTqrnRPlvnDJcbq9CafU7
+        FoSxIKS06j28JHCKHPodnGUo4FDwYGZOJjy0h+Uyiu+8ZUE4C0Kv0UT2ziuBxqfDaOwYVgINNNY/GVKC
+        dW1DqH08qMgcogdXKnsXBYWVb+AhgYM2NlCAQ9OzbiVU1zYIu8OthPWGAep7ME37Lpb1sCCCTxBWUN4N
+        t+yFnRbtDg9sFGCEGYlww8pMS7AQgm8t9/orFqxkQXgeTSSPFzbaaNTRlZ1IhoXqmtYB1LT0Y8ou4T6N
+        DNcWEp8tes6CVSyIyKIJ/1krLRjp2liwEGrux6TdharmPlQ19eGHzYVJm4SMSx2LAp44JZk2Ssoib/Jj
+        pnoBwYUJqwgzjafy21mwWjkBT+boajjEi4uImBBEmKhnoqCJahZwnZZjWBCEaDLru9JyDdRsRSpzzk8L
+        UrOpzm7BMSaLaYaWOJyu7/a/xKW+N80/hI/kZw3V/7KWegz3+RUu+wUxSHi5euJ6vgAAAABJRU5ErkJg
+        gg==
+</value>
+  </data>
+  <data name="date_time.ImageOptions.LargeImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAAAFHRFWHRUaXRsZQBEYXRlO0Nh
+        bGVuZGFyO9842KYAAAcdSURBVFhHnVZZcBRVFI0ruyxWqR/+qaDFhz9W4QeyIwhC+eOHLAmLggWBQAXF
+        sCSYAiIhkASCAkJYwhqykn3fFwjgUmUJhCzlAmFLmJlkJjNQHu+53T0zSEYrTtWpd2/3fe+c2/Nenw4K
+        Cgp6LuFQVWVici0SjxjYk1yjSDxijrynkGsBkGBe55hw2FfHePfBiirheV7wtCAIgBfMByRKkcv9CE7C
+        9SQu/vS773rvk/cv/Phbn/OsteIPVUN4Bgue6UvAwPjD1bpAl92DB3a3AYcbXQ4jP5V1Re5J7r3v0ZjX
+        Hsh4MvOyNzfqTNg8uu7u76soYEggAYNYwEKD3CC1CEl0MosEhoDHCMy6ExlN6LL53RdirZNrTtdDxB2o
+        pIChgQQMjjtQYTwBmdCpCxmTO70El0wCX2ddJDFrU9KbjHnmfMYWukVA7P5yChgWSMCQnVJQf7kdJzIu
+        eZEiMXE8/RIu75uNpqRZaNr7AS4kzkBj/HQ07JqK+p2TURc7CbXfTMCxtIs4eu6fuIDKC63Ysa+MAl4I
+        KGDHt2XoEaX+yr3xAzcqo8fBczNfkAvPnzmC8/D8kQW3IhMlEe/gvq1X4MZ9qe9USC7o7vFge1KpJeDZ
+        vjbh0Bgp6HY+1AUsYk62FiWB89peOBqXwdFgov4zOOo/Rc8vcchb87YSaz1HJXfjnsAhArbuKaaA4YI+
+        BQxjQXePPAFTNRfo1MUMkMD5cwxsNUthq10CW/ViiQXVi+C4EoXM5WO9pKy/5we7rBudUEQBIwIKiE4o
+        1EfFiUYHor7L1w0JHE0bBBGwX/xKsB72xi8E4bA3hCM1ZIxZL+QyzwtZzy7rbtld8K8CXmBBeX0zks80
+        4rCF00Z86HSDEpwNGY2zwaNxZqFggWD+aJye9wZOffK64uDJehwgTnCs86Kg4ldExuVRwEjrCXAf+P+G
+        b5YCKrUe3V3pgmDO8eCpeh0NuPxGl3ZLQt893jdrOnth6/Zg044cCnjRfB0/9YSATbG5KsBLIhP9iQ6e
+        IIFLTsoj3awEN1fC/lSERSQgKuaQ5NxwFjx6n7nT5UH0zuNatyxsa63pB/QEQsWM2PBNDuyi9K5JfIcd
+        dFqd9mJ/Sq3m3U4PmiLWoWzu+yid8z4+D49F3ZXr+GheOEo+nIbS2dNQMnuqoniWgaJZUx6rK5w5GYUz
+        J6FgxuRyU0TQyPXbs+Xd78EdEXBHiBQiwoq/O16rsV06Kp0zHbfjt6AjPgoHlq6A4y8gauZH6NgVaSBu
+        M27FRfqwc/NjdbdiN+KmIH/6RP4tak4jv9iaiZzSX0CibxU1Bo4RksuYdLQajVfapLtpQhKJ9vAliPt4
+        IZKOFSB03ES0r12saFu7CO1rFqFtTYhAxrCQx+raVgfjz5gI5E2bQAH6XhgVHp2h7nf7vgu3pVMdBXfM
+        POloDTruO2VD9aLogylgF1x843sTMPe1t7B47Fgl4uJEq9/YuioYEe+O17rgMW+iNXQB/ti2HrlT36OA
+        5yjgxbVb0tWAbgtJR6fzCSFJydW4dU8EOHrl/5ssHWxQEi5uEbauWii5IHQhWhQL0LLSwnwzlnGFCIhe
+        h5wp430CwqLS1Pk6pGN2qkI0NrAnuUoE9IhNu0Dj4ob1dz9/F/S6qOWmfTikrdsN+o95LINGrd6cKgLk
+        9augDVuj4Q1nzv8g590lT8ClE3m2yxvbUEY0tGtNWUMbSiUulZE5xxKivlXzkrpWidtQLOMDERCzTw1q
+        AP+CYcvXp1SEbjqLlSYYh24UWNc2nsFKQXbRj6Bx2eTEkMAC3/8GmUkor/JiMy5WAb1KXFTXgqJaESDz
+        t+0toYCBFMCPRX4s8E310j/wsuQWXpH4VRoXF2BnFiyCYiEoFgJ6SREJa0nYokZVWHND0KLgF1d0ojqk
+        CuAbieeRO5JiAoHFw2hcPDGBjMtnZD5X9DqkaVTc8Fvi1aAGUQB/fCX+FyhyII2LCxRKZ1ZHFMMToadi
+        VYj6Q0H1DeRXNyO/6obmeVWMm5FX2azzI3flG1/K/t/ogWJTJJ/UQBoXF1ACeawc6SEqIDRYjl+w5iRU
+        CCF9JFfG3MrrCm5K+o+sN6S/AgZxIk8Ku2F3FkHrSnkHCFoESljRjBwhy6m4roLOl0tcfg3nK67ph0+E
+        4ZBD+ytgMI2Lmy6QcdEz1MgsT7H8xc9buCfoP7r5+/kXDOJEbrQc6cTAdf0WZIfZ7LDsmu76bBmzy64i
+        i3mXW0aJSw3w/pfbsv7XExhA42KXJMouv6pEzEnEmASam2SZMtJfMkuugnFmya+a03/6uwl5Sp7hRC7g
+        3xGNy1jcIOH9DCHKYE5CuZ9RzNwA87Vfpxtu2I+/QI8rjctwy76Ni/foH5ajGjG9xYJxj/6jR7+fAoJk
+        YkFY1DlZgEhDWOQ5rBaERabp6EOqxITfNfEc+o4iMrWAHf0NCho+ZteVWqkAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="barStaticItem1.ImageOptions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAWdEVYdFRpdGxlAFRpbWU7Q2xvY2s7V2F0Y2hviDioAAADeElEQVQ4T01Te0zTVxS+DLf4/svF
+        OIOsBWS6qRM16oaC0BakDHmYKCqEWYmizHWKWkic6MIUfPPQTBtcWWoWp4LKbMcsFh/10SoqaUsFW1pS
+        EPpQiYXy8vPe35rFm3z57rn3nO+ec3Iu8bfcJQx0BVEEN/+8e1VLceEZ04FCg+WXokFTsczwdG/B2YeF
+        0lR6P4b5+Z/RGArdmhTyf3BtnuQz4z7ZFeuJX+FRXYTvgQbUCb77GrivX0D74QN4IpNeVWavnU5FPhp4
+        covcXi1mD5MgjXTLLFNxYU+X8gw8DZdgKNgKdZIAddFLKAuhz5fAVadAZ3UVmndu61GsywhlcU1pKwlJ
+        juCPfbrnx+aXF86hU3EKfwtioSs9ArPuEWxdrzm+V3YE1wUxsFWUUJFK6PIk9VTgE67serEgh9YL1zUl
+        VKI4mLV30e31wecfxsjoO/RTZrZZq4MqIQ7d546xLPBnXHQO6xlRieP/sctPwiDdDH15JbrcPi7ww8Vs
+        p/stHlVUwbAlC+1le1EnWNbAZaFOiHW7LivQIBbC0WrFVeFKXIyOh3LBt6j+chGkCevRP+BHz6t+OCxW
+        3BCL4KwqQV3s0l4qMJbUC5fDW6uAKj4GHu9bePr8aG3vgN3RCafTiYwsGWd7+gbgpvdq0Qp0V+ynjywe
+        ogLjSG3MN+7u38txI1mIXqsdfb4hisEADyFtwx5YqAA777U50PidCLaSApxfEsUyGEeUSxf+a9y/G/pN
+        mWitUXDN6/ePcM1jSM3chRc2O7e3/FED/fdr8Dg/B/KouRquhMr5X+Wp05PQcVCGxtQkuFqeYWh4BIPD
+        oxynrN2JDrsDbqMR2nQxXhRtQ61oOUpnzczlJjNi4oRJ1fPnGPXbJTDv2MSlaJH/hjftbRil3X/T1obn
+        1NamJMK8fSPubEhD+exINQ0eHxh/EryDNyNKPm9Ob9P6dLQV5EKflQHtqkQ0JgvQlJoAfXYGnv8kgSYt
+        Eadnz3RlTZsayWbg1BcRhHj+UrBxHpM5bWr48chwNe0J7tFXTD/kwErFTPnZ0K1LQc3Cr1EWxmtY/ekU
+        GvXfpyoP5xPiPi+nOMtEgllaRaEhuaVhvJvHw3le6oBjfJ73ED/0pixkOqt5QsAvyKU4TY7y6Zc4GcYP
+        gMd9LIqPA/VNojyZgjGrl50HHf58BuEQGsLhPfQFN7ug8dRhAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="barStaticItem1.ImageOptions.LargeImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAWdEVYdFRpdGxlAFRpbWU7Q2xvY2s7V2F0Y2hviDioAAAKzUlEQVRYR41XB1SUVxod4sbEGmM2
+        oGs0uhY0FiKigOWIFVGqgIAKippYUFRCRGMsEROTYwMVUVSCYiFWVFBmRIoMCEiTkV6kDQwwwNC7d7/3
+        ZoZwNuvZ/Ofc8/+vffd+5b03Iyg4dkhQ+NtPAunvFwTSgIv/EwKBQEOFD+jN0Oc9YGN87l9t+SltEw/j
+        K/jlIE2jhwnorJIKuupr/oJexH3CjxzQLPQ761hy5Xxwqb9vSpm/r5SMoeyKr7Tkim9K0RWfhznnT68L
+        +dFDi9b9QyVUo6tOLuj8L3RUlAjyfz7QS0BNpaBLQQJ6QUXeJ+XUsYnFl87dkl71g/zpQzSlp6D1bR7a
+        pSUg4/QuRkthLhpfJ6E6NBhlJKrQ1/uPmKOHviIbH6qFdNZWCThqqgQd5HDukf1KAUwJHyCV3sO1WRcL
+        4QfeG9cNLvT1Olvqf6FdES9GR1UFOmRlaM3PRFNaAhoTo9EQIyII0ZgQSX0v0Zr3Bu1lRah7+QKll863
+        Z3uf8DloYzVElS4NZr9TXkkRLxdkH9qnFMCUMFUMaq+FB/aOLPQ5/bry8X20l5eivaQATUliZJ05BdG6
+        Dbg+exEuT9EHGeTv67MXQujkjMzTx6EIDyZxkSQmE7Lg28jzPp5+03XbaFVaNDqInCHjxz1KAVmkpFMu
+        6yG/67ZjRL738QJ5hBAd5cVoTk/gxIEGRrg4Zzlu7T+Oh0FChAoTIUop4m/WZv1sPHDWfGScPIbaJ3fQ
+        mBSDalEIck7+VuC30XlUjwhZmUCy110pIPOAh6CjUso+P3A1XjIw58SxmOpnT9FWnIf62GcQOq6H74wF
+        uOdzA9GSUrytUKChpR1d3e9w71Ekf7N2gUzBx+/53MQFmi9c7YjqO1ehiHwCGUXyzS9HYlfO0GXpYAWq
+        kea+WylAso8rYdvnw/Sjh33KggLR9jYH9dFPcN/EHFdM1yAiPgcZxXK0tnfi3Tu8F2w8q0TO5/9u7oh7
+        xqaQ3biIumfBKA64jMQDP1wgnn6ML3nXDqUApoapEu52Ncg5fqyrJfcNGshz0RpH+Fs4QZxegvxyBdo6
+        utBN3v4/sHmv3hRBLClDwEpnCO1XoyLgLGrC7iPj6E9dQZs2zCW+vipeLoB5/1HyPo/HFSFUQMliSDwP
+        4ILeQrx4lUPkdTj062V0dnUT3v357la2WQrYWBcbo+/U9FwssXDBi+QsiF/l4ZLBUqTt+w7ll05RFC4h
+        bpdrKPH1J7DDjD99zlmaj0/53q2rWZKEmpAgBOrPR2jAA+RK61BQUY8WCm1HZ/efIMK/tKkvJT0HprY7
+        IYqMx5OIOGQUVeLJtUe4aWiEEu+jlA4/xLu4dLnozxrDUq6OQt+w9evcsk+f4AWTftADl43MeM4LqOAK
+        ZfU8/G2dSrS/B8mvs7HCegfCo+KRlJIGSX4ZX5tJNRGw1BqpbltR6OmOtB/2IGil9RYi/1gVfcHHkc7r
+        Q0puXUPl9QsQ2dnh/uFT3PO3ZIAZaWrtQCuJeB9epWZhmeU2iCLi8So5FRWVchRVNqBI1sDXP/T0hsjW
+        Blm76Kw4vBehtnYsDQPVaRgQ4eiUIwv+A6Xenjxc4tBoTv62sp4M1UPe0ILmtk60MFA6eiMxJRNLzTdD
+        +DyOk8uqa2h+K4qrGlDMRFTV46UwDkFzFiDTZS2yPHbgqY1dHpF/woqf1cDA5w5rGqoe3ULhEXcE6Bgi
+        PT2fe8CNEEqrG/heZ5FoblPialAYbNb9gBWU87DwOCQmEXmVnM8rq2lECa1hYOuzsotxVXc23my2R4br
+        ejy1tGkg3qFqAYOfrbKH/EEgcvduwaWJusgrrkb8BmdEO6yG0MIajxab4PbsBQj82hCXJ+ji/JeT4eDk
+        gXJ5PVY570foUxGFvQb1ze2oqGmGVN6EMnkjCW+E9dq9PJL+k/Uh2WADybd2CDGzBJF/pipEweAnltYN
+        rEKzKUfXdOciJ7sIJVWNCIuMhTAqFiLCs6g4jkhxAmJeJsDzuB/M7dxh7+RKuY/iaaqoa0JFbRPKa5og
+        JTARDAWF5QjUm4fXThZIXWuBB8amjUT+zx4BwcvNc0v8vJC10xl3FixFelQChU+5WMpAxphhBlldM2SK
+        FlQqmrHAxBE+fv5Izy5EJetXQT2XCSkjZMQl4/7iZUh1WIFEezP8YWSc3zsCg24tMgnLPPYTsnZvwPPV
+        axF1+iJKOTl50ouYkTDiqvoWVBPsNxzkEWFtDi6sRSmkthnlHE2IOXsZkasdkGJrjBgbOt4NjYQk4FN1
+        DfT3NZy/T7xlC9XANqTt/BZ3Vq4l7ymUnFzpWWWdkoQRyxmo0u2cf0RUbAJq6Jv3qcarSCQTytaVU1qC
+        7Z2R/I0TkqwWIcxkOX6ZOpPdRIPU2/Aj57ETde4uXt5d4OmBDBcnCpcJJOEx3AMmoLfXLNeMsKaxFba0
+        C6LjElBL37yPCVGJUUajGZlUP4+WmfL8J5rOx00Do+5FmsOnEDm7lNg9xPfikCt680QJLluQ5miONLft
+        uGu2CqWllZTvZlit8UA1EavJGWFdUyuv8BckoK6pDbUMTAjB0uF7ilQryqXVCLZZg9Tt3yDBdB7CjObi
+        3NRZz3sVIBfALqP+O8d+ZRw0d0n3G1dnvlWiHR0Rtt0dlbWNPWGvJe9qG9s4oYK2nNXqPRDTjlA0U5v6
+        uBBVNKpJeLgbCXQkAQ7LEbvEENemz+7e9MVYU1X4GS9/mAp2MQz1mqwX+MTCihdL9nffQmRtA9EOEiGr
+        hbyxhXvJyQn1dOBY2LuTgET+zUUQ2Hh1VR0idu9FuK0tMreuwcsls3BHTx+/jdO5RTyahD+vY/8p+uoo
+        9BvTb8BIn0l6Kc8tLZFoNh+5e7ZyD0Ls1yHnWRQJaOUk9S1t/MQzW+UGcUIiGuiEZG12EOVFxODp2o20
+        bjWy6dSLW6iHYL0Z8Bqrkzaib7+xRDaARf3iuOlK9y9P1FNHgd3PAxcP1fraZ4KuVGSyDAkmc5C13QkS
+        dxeEmlpAuGkbXl+7ibLXGZDLqtBIpFHhEZBKMpF+PQjhW10RRhGU7NqMzG9WIdZIFw+mT8eZMdPK5w76
+        bCbZH6yqOQ3fMTpKAUyJQhSsFsEKcvCKT4fpn/m3Tt5dg3kQL5yJFBtj5HtsgWT3Zoid1iDM0gqPl5vR
+        blmOkBUWEFlZ834JbeG87zYiyXwBYubq4MakaTg5cnLB4sGfzyG7Q1Sp1qh9eENwbhTbCPScJyWKsPsC
+        xdN7veth0LiPB4w/OmLidT/tGd2PZ82AeL4u38eZm2yR57YRBfu2ouigKwpIWB4d4W+cVyKJ0hYzZyqC
+        v54C39GTuw8NG397dN9+k1TkPO+1wdcFDGdGsP8t9PiQEkXoHcJtAcDuCOVvRALLlabZJ5pLfh4+4fn5
+        L6cgUHsqHk2fCtHMqYg0nAbxnGmINGDtKXisMxnXxn2Fs19MwlGt8REmgz43pvXDWVrVYWf21QK8hk1U
+        CmBK6kKCBHWP1WCFqvx3RGCqWd6GGfYfMtP1s1H7PbXGRf2qNSHn5DDtGq9h2jihpV3L2kc0x0bvGDrq
+        0Kx+nxjQ/H+pvP6I3qy2ejxXCzitOUEpgCnx5tAWeGlp828vLYaev2nMADPEPGF3+DDCSMJoAvttx97s
+        Twfzll2x7IjtIWZE74NSwd971BFhqWFRYQTsNx07TtmbtVl/z7/iv2dWIPgPZAodhK0Ag88AAAAASUVO
+        RK5CYII=
+</value>
+  </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>52</value>
   </metadata>
   <metadata name="timer_states_bar.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>267, 17</value>
+    <value>251, 17</value>
+  </metadata>
+  <metadata name="timer_date.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
   </metadata>
 </root>
