--- a/QURAANEY/USERES/F_ADD_USER.resx
+++ b/QURAANEY/USERES/F_ADD_USER.resx
@@ -256,4 +256,7 @@
         57ods4eNN+SnX4035pFejbdp9gz7PLfypwF+AhL6eCQFkyIEAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="fontDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
